--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           
             
             <!--==================== SKILLS 1 ====================-->
-            <div class="skills__content skills__open">
+            <div class="skills__content skills__close">
               <div class="skills__header">
                 <i class="uil uil-brackets-curly skills__icon"></i>
 
@@ -622,7 +622,7 @@
 
               <div class="portfolio__data">
                 <h3 class="portfolio__title">Under construction</h3>
-                <p class="portfolio__description">I am currently working on some new projects</p>
+                <p class="portfolio__description">Currently working on new projects to upload</p>
                 <a href="https://github.com/alexandreprevi" target="_blank" class="button button--flex button--small portfolio__button">
                   Github
                   <i class="uil uil-arrow-right button__icon"></i>
