fixed button cv

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
 
             <div class="about__buttons">
-              <a download="" href="assets/pdf/Alexandre_Previ_Fullstack_Developer.pdf" class="button button--flex">
+              <a download="" href="assets/pdf/Alexandre_Previ_Fullstack_Developer.pdf" class="button button--flex button--cv">
                 Download &nbsp;CV&nbsp;
                 <i class="uil uil-download-alt"></i>
               </a>
