--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             <div class="about__buttons">
               <a download="" href="assets/pdf/Alexandre_Previ_Fullstack_Developer.pdf" class="button button--flex button--cv">
-                Download &nbsp;CV&nbsp;
+                Download &nbsp;CV
                 <i class="uil uil-download-alt"></i>
               </a>
             </div>
